<resources>
    <string name="app_name">IpTv</string>
    <string name="loginbtn">Login</string>
    <string name="registrationbtn">Registration</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="name">name</string>
    <string name="premium">Premium</string>
    <string name="vod">VOD</string>
    <string name="live">Live</string>
</resources>
