<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registrationtoolbar"
        android:background="#00bfa5"
        app:titleTextColor="@color/text"
        >
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/loginimage"
            android:layout_width="70dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_kaaba"
            android:layout_marginBottom="1sp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="6"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="center">

            <EditText
                android:id="@+id/rnametxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textCursorDrawable="@null"
                android:hint="@string/name"

                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            >
            <EditText
                android:id="@+id/rusertext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textCursorDrawable="@null"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/rpaswordtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        >
        <Button
            android:id="@+id/loginbutton"
            android:text="@string/registrationbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        >

    </LinearLayout>


</LinearLayout>