<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logintoolbar"
        android:background="#00bfa5"
        app:titleTextColor="@color/text"
        >
    </android.support.v7.widget.Toolbar>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_weight="1"
        android:weightSum="6"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="center">

        <ImageView
            android:id="@+id/loginimage"
            android:layout_width="70dp"
            android:src="@drawable/ic_kaaba"
            android:layout_height="65dp"
            android:layout_marginBottom="1sp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            >
            <EditText
                android:id="@+id/lusertext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textCursorDrawable="@null"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/lpaswordtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:gravity="center"
        >
     <Button
         android:id="@+id/loginbutton"
         android:text="@string/loginbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onclick"
         />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        >
    </LinearLayout>
</LinearLayout>